tests/test-files/parse-pattern.txt
================================================================================
100 Invalid pattern
================================================================================

(package test-package)

(define f
  (let #C(1 2) = x)
  Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:7
   |
 4 |    (let #C(1 2) = x)
   |         ^^^^^^^ unknown pattern literal

================================================================================
101 Invalid pattern
================================================================================

(package test-package)

(define f
  (let (x y . z) = g)
  Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:7
   |
 4 |    (let (x y . z) = g)
   |         ^^^^^^^^^ unexpected dotted list

================================================================================
102 Invalid pattern
================================================================================

(package test-package)

(define f
  (let (5 x y) = g)
  Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:8
   |
 4 |    (let (5 x y) = g)
   |          ^ invalid constructor in pattern

================================================================================
103 Invalid pattern
================================================================================

(package test-package)

(define f
    (let (@) = (Tuple 1 2))
    Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:9
   |
 4 |      (let (@) = (Tuple 1 2))
   |           ^^^ body expected

================================================================================
104 Invalid pattern
================================================================================

(package test-package)

(define f
    (let (@ a) = (Tuple 1 2))
    Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:9
   |
 4 |      (let (@ a) = (Tuple 1 2))
   |           ^^^^^ bound pattern expected

================================================================================
105 Invalid pattern
================================================================================

(package test-package)

(define f
  (let (@ a (Tuple _ _) z) = (Tuple 1 2))
  a)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:12
   |
 4 |    (let (@ a (Tuple _ _) z) = (Tuple 1 2))
   |              ^^^^^^^^^^^ unexpected expression after bound pattern
